--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     margin: 5px;
 }
 .navbar ul li{
-    background-color:lightslategrey;
+    background-color:rgb(119, 153, 153);
     border-radius: 10px;
     margin-left: 5px;
     margin-right: 5px;
@@ -32,20 +32,20 @@ body{
     margin: 5px;
     width: auto;
     height: 500px;
-    color:rgb(219, 161, 161);
+    color:black;
 }
 .quem-somos p {
-    background-color: rgb(25, 54, 85);
+    background-color: rgb(187, 160, 85);
     width: 400px;
     font-size: 30px;
     margin: auto;
     border-radius: 10px;
 }
 .quem-somos h3{
-    background-color:rgb(19, 53, 88);
+    background-color:rgb(187, 160, 85);
     text-align:justify;
     font-size: 20px;
-    color:rgb(223, 142, 142);
+    color:black;
     border-radius: 10px;
 }
 .margin {
